fix transition jumping

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -34,15 +34,7 @@ body {
       margin-bottom: 1px;
       border: 1px solid black;
       background-color: #eee;
-      transition: top 0.5s, background-color 0.5s;
-      top: 0;
-    }
-
-    .calendar-#{$day} div:nth-child(#{$i}):hover {
-      cursor: pointer;
-      position: relative;
-      top: -20px;
-      background-color: pink;
+      transition: all 0.5s ease-in-out;
     }
 
     .calendar-#{$day} div:nth-child(#{$i})::after {
@@ -53,6 +45,12 @@ body {
       font-size: 30px;
     }
   }
+}
+
+.calendar div:hover {
+  cursor: pointer;
+  background-color: pink;
+  transform: translateY(-20px);
 }
 
 .calendar-mon::before {
